--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #6E43CB;
+}
