--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,22 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scrollbar-width: thin;
+    scrollbar-color: black;
+  }
+  ::-webkit-scrollbar {
+    width: 13px;
+  }
+  ::-webkit-scrollbar-track {
+    background: black;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #6E43CB;
+    border: 3px solid  #14142B;
+    border-radius: 10px;
+  }
+
 h1 {
     font-size: 48px;
     font-weight: bold;
