--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,21 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html, body {
     scrollbar-width: thin;
     scrollbar-color: black;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
   }
+
   ::-webkit-scrollbar {
     width: 13px;
   }
+
   ::-webkit-scrollbar-track {
     background: black;
   }
+
   ::-webkit-scrollbar-thumb {
     background-color: #6E43CB;
     border: 3px solid  #14142B;
