--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,17 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html {
     scrollbar-width: thin;
     scrollbar-color: black;
     scroll-behavior: smooth;
-    overflow-x: hidden;
-    overflow-y: scroll;
   }
+  
+body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+}
 
   ::-webkit-scrollbar {
     width: 11px;
